// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots DataTable Default 1`] = `
<div
  className="sc-jqUVSM bNIjpY"
>
  <header
    className="sc-kDDrLX fNzJMt"
  >
    <h3
      className="sc-iqcoie itJXXO"
    >
      This is a title
    </h3>
  </header>
  <table
    className="sc-breuTD hxqCwt"
  >
    <tbody>
      <tr
        className="sc-ksZaOG edSjin"
      >
        <th>
          Status
        </th>
        <td>
          Unknown
        </td>
      </tr>
      <tr
        className="sc-ksZaOG edSjin"
      >
        <th>
          Last update
        </th>
        <td>
          Yesterday
        </td>
      </tr>
      <tr
        className="sc-ksZaOG edSjin"
      >
        <th>
          Type
        </th>
        <td>
          Random type
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots DataTable With Subtitle 1`] = `
<div
  className="sc-jqUVSM bNIjpY"
>
  <header
    className="sc-kDDrLX fNzJMt"
  >
    <h3
      className="sc-iqcoie itJXXO"
    >
      This is a title
    </h3>
    <h4
      className="sc-crXcEl dWHvEp"
    >
      Subtitle
    </h4>
  </header>
  <table
    className="sc-breuTD hxqCwt"
  >
    <tbody>
      <tr
        className="sc-ksZaOG edSjin"
      >
        <th>
          Status
        </th>
        <td>
          Unknown
        </td>
      </tr>
      <tr
        className="sc-ksZaOG edSjin"
      >
        <th>
          Last update
        </th>
        <td>
          Yesterday
        </td>
      </tr>
      <tr
        className="sc-ksZaOG edSjin"
      >
        <th>
          Type
        </th>
        <td>
          Random type
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots DataTable With Subtitle And Children 1`] = `
<div
  className="sc-jqUVSM bNIjpY"
>
  <header
    className="sc-kDDrLX fNzJMt"
  >
    <h3
      className="sc-iqcoie itJXXO"
    >
      This is a title
    </h3>
    <h4
      className="sc-crXcEl dWHvEp"
    >
      Subtitle
    </h4>
    <div
      className="sc-evZas cpFPUm"
    >
      <span>
        Here be React children.
      </span>
    </div>
  </header>
  <table
    className="sc-breuTD hxqCwt"
  >
    <tbody>
      <tr
        className="sc-ksZaOG edSjin"
      >
        <th>
          Status
        </th>
        <td>
          Unknown
        </td>
      </tr>
      <tr
        className="sc-ksZaOG edSjin"
      >
        <th>
          Last update
        </th>
        <td>
          Yesterday
        </td>
      </tr>
      <tr
        className="sc-ksZaOG edSjin"
      >
        <th>
          Type
        </th>
        <td>
          Random type
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots DataTable Without Subtitle And With Children 1`] = `
<div
  className="sc-jqUVSM bNIjpY"
>
  <header
    className="sc-kDDrLX fNzJMt"
  >
    <h3
      className="sc-iqcoie itJXXO"
    >
      This is a title
    </h3>
    <div
      className="sc-evZas cpFPUm"
    >
      <span>
        Here be React children.
      </span>
    </div>
  </header>
  <table
    className="sc-breuTD hxqCwt"
  >
    <tbody>
      <tr
        className="sc-ksZaOG edSjin"
      >
        <th>
          Status
        </th>
        <td>
          Unknown
        </td>
      </tr>
      <tr
        className="sc-ksZaOG edSjin"
      >
        <th>
          Last update
        </th>
        <td>
          Yesterday
        </td>
      </tr>
      <tr
        className="sc-ksZaOG edSjin"
      >
        <th>
          Type
        </th>
        <td>
          Random type
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
